[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hkqr"
version = "0.1.0"
authors = [
  { name="Pulsely", email="python@pulsely.com" },
]
description = "Hong Kong HKQR FPS Code generation for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pulsely/hkqr"
"Bug Tracker" = "https://github.com/pulsely/hkqr/issues"
